# Resume

./: .coverage  .coveragerc  .gitignore  .mergify.yml  .travis.yml  README.md  manage.py  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  python-app.yml
config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  production.py  tests.py  travis.py
config/templates/config/: 404.html
credits/: apps.py  urls.py  views.py
resume/: admin.py  urls.py  views.py
resume.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resume/migrations/: 0001_initial.py  0002_experience_pathway.py  0003_auto_20200801_1330.py  0004_auto_20200801_1809.py  0005_auto_20200801_1811.py  0006_auto_20200801_1818.py  0007_auto_20200801_1820.py  0008_pathway_about.py  0009_auto_20200802_1307.py  0010_auto_20200802_1320.py  0011_auto_20200802_1331.py  0012_project.py  0013_auto_20200802_1347.py  0014_auto_20200802_1402.py  0015_project_number.py  0016_auto_20200802_1407.py  0017_about_contact.py  0018_auto_20201011_2025.py  0019_auto_20201011_2025.py  0020_project_pending.py  0021_auto_20201011_2111.py  0022_auto_20210116_1956.py  0023_portfolio_portfoliocategory.py  0024_auto_20210307_1812.py  0025_delete_experience.py  0026_auto_20210307_2222.py
resume/models/: __init__.py  about.py  experience.py  pathway.py  portfolio.py  project.py  social.py
resume/templates/resume/: index.html
static/: package-lock.json  package.json
templates/: 404.html  500.html  base.html
tests/: test.py
tests/resume/: test_views.py
(+15 files in other folders)
