[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["GuillaumeO <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
django = "^3.0.7"
whitenoise = "^5.1.0"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.5"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
